--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   run-test:
     runs-on: ubuntu-latest
-    environment: production
+    environment: ${{ (github.ref == 'refs/heads/feature/cicd-pipeline' || startsWith(github.ref, 'refs/tags/') || github.base_ref == 'feature/cicd-pipeline') && 'production' || '' }}
 
     permissions:
       id-token: write
